# GENexplore

./: Cargo.toml  README.md  TODO.md  help.gout
examples/: benchmark_ga.rs
src/: lib.rs  main.rs
src/analysis/: topology.rs
src/core/: chemistry.rs  domain.rs  mod.rs  spatial.rs
src/engine/: evaluator.rs  mod.rs  operators.rs
src/interface/: mod.rs  state.rs  ui.rs
src/solvers/: bh.rs  ga.rs  mod.rs
tests/: test_core.rs  test_operators.rs  test_solvers.rs
tests/common/: mod.rs
