[package]
name = "klmc_ultimate"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI & Interaction
ratatui = "0.30.0"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }

# Math & Physics
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = "0.8"
rand_chacha = "0.3" # For reproducible seeds

# Concurrency & Async
rayon = "1.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tokio = { version = "1.32", features = ["full"] } # Optional for future async IO

# Error Handling & logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tui-logger = "0.11" # For displaying logs inside Ratatui

# Serialization (Save states/Config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# System
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = "0.4"
regex ="1.0"